<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="@dimen/login_progress_bar_size"
            android:layout_height="@dimen/login_progress_bar_size"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/login_margin_top"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/loginLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/placeHolder"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_placeholder_height"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/login_view_margin">

                    <TextView
                        android:id="@+id/titleTextView"
                        style="@style/signInTitleTextStyle"
                        android:text="@string/login_sign_in" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/loginFieldTextInputLayoutStyle"
                        android:layout_marginTop="@dimen/login_placeholder_height"
                        app:startIconDrawable="@drawable/ic_email">

                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/loginInputTextStyle"
                            android:background="@drawable/input_background"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="@integer/one" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/loginFieldTextInputLayoutStyle"
                        android:layout_marginTop="@dimen/margin_default"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorAccent"
                        app:startIconDrawable="@drawable/ic_password">

                        <EditText
                            android:id="@+id/editTextPassword"
                            style="@style/loginInputTextStyle"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:maxLines="@integer/one" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_button_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_extra"
                        android:background="@drawable/grad_button"
                        android:text="@string/login_button_label_authenticate"
                        app:backgroundTint="@null" />

                    <TextView
                        android:id="@+id/registerText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_large"
                        android:text="@string/ask_for_credentials"
                        android:textAlignment="center"
                        android:textColor="@color/blue_link"
                        android:textSize="@dimen/normal_text_size" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="@dimen/progress_bar_size"
                        android:layout_height="@dimen/progress_bar_size"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/progress_bar_size"
                        android:visibility="invisible" />

                    <LinearLayout
                        android:id="@+id/bottomPlaceholder"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/placeholder_height"
                        android:orientation="horizontal" />


                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>